--- a/src/app/view/productos/productos.component.html
+++ b/src/app/view/productos/productos.component.html
@@ -1,1 +1,5 @@
 <h3 class="titulo-productos text-center">Productos</h3>
+<div class="row">
+    <div class="col-lg-6"><app-producto-add></app-producto-add></div>
+    <div class="col-lg-6"><app-producto-list></app-producto-list></div>
+</div>
